--- a/templates/de/general_information/general_information3.html
+++ b/templates/de/general_information/general_information3.html
@@ -9,7 +9,7 @@
     <ul>
         <li>
             <label for="dateOfBirth">Geburtsdatum</label>
-            <input type="date" name="dateOfBirth" id="dob" required>
+            <input type="date" name="dateOfBirth" id="dob" value="{{fields.date_of_birth if fields.date_of_birth != None else '' }}" required>
             <span>
                 <details>
                     <summary>Hilfe?</summary>
