--- a/templates/de/adress/adress1.html
+++ b/templates/de/adress/adress1.html
@@ -10,7 +10,7 @@
         <ul>
             <li>
                 <label for="date_registered">Datum der Anmeldung</label>
-                <input type="date" id="date_registered" name="date_reg" required>
+                <input type="date" id="date_registered" name="date_reg" value="fields.registration_date if fields.registration_date != None else '' " required>
                 <span>
                     <details>
                         <summary>
