--- a/templates/de/adress/adress4.html
+++ b/templates/de/adress/adress4.html
@@ -10,7 +10,7 @@
         <ul>
             <li>
                 <label for="zip_code">PLZ</label>
-                <input type="text" id="zip_code" name="zip_code" pattern="[0-9]{5}$" required>
+                <input type="text" id="zip_code" name="zip_code" pattern="[0-9]{5}$" value="{{fields.zip_code if fields.zip_code != None else '' }}" required>
                 <span class="extra-info">
                     <details>
                         <summary>Hilfe?</summary>
@@ -22,7 +22,7 @@
             </li>
             <li>
                 <label for="city">Stadt</label>
-                <input type="text" id="city" name="city" pattern="^[A-Za-zzßÄÖÜäöü]+(([-]|[\s])?[A-Za-zzßÄÖÜäöü]+)*" required>
+                <input type="text" id="city" name="city" pattern="^[A-Za-zzßÄÖÜäöü]+(([-]|[\s])?[A-Za-zzßÄÖÜäöü]+)*" value="{{fields.city if fields.city != None else '' }}" required>
                 <span class="extra-info">
                     <details>
                         <summary>Hilfe?</summary>
