--- a/templates/de/adress/adress5.html
+++ b/templates/de/adress/adress5.html
@@ -10,7 +10,7 @@
         <ul>
             <li>
                 <label for="phone_number">Telefonnummer (Optional)</label>
-                <input type="tel" id="phone_number" name="phone_number">
+                <input type="tel" id="phone_number" name="phone_number" value="{{fields.phone_number if fields.phone_number != None else '' }}">
                 <span class="extra-info">
                     <details>
                         <summary>Hilfe?</summary>
