--- a/templates/de/general_information/general_information2.html
+++ b/templates/de/general_information/general_information2.html
@@ -9,7 +9,7 @@
     <ul>
         <li>
             <label for="fName">Vorname</label>
-            <input type="text" name="firstName" id="fName" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
+            <input type="text" name="firstName" id="fName" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" value="{{fields.first_name if fields.first_name != None else '' }}" required>
             <span>
                 <details>
                     <summary>Hilfe?</summary>
@@ -22,7 +22,7 @@
         </li>
         <li>
             <label for="lastName">Nachname</label>
-            <input type="text" name="lastName" id="lName" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
+            <input type="text" name="lastName" id="lName" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" value="{{fields.last_name if fields.last_name != None else '' }}" required>
             <span>
                 <details>
                     <summary>Hilfe?</summary>
