--- a/templates/de/sepa/sepa1.html
+++ b/templates/de/sepa/sepa1.html
@@ -10,7 +10,7 @@
     <ul>
         <li>
             <label for="name">Name</label>
-            <input type="text" name="fullName" id="name" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*">
+            <input type="text" name="fullName" id="name" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" value="{{fields.name_sepa if fields.name_sepa != None else '' }}">
             <span>
                 <details>
                     <summary>Hilfe?</summary>
