--- a/templates/de/sepa/sepa2.html
+++ b/templates/de/sepa/sepa2.html
@@ -10,7 +10,7 @@
     <ul>
         <li>
             <label for="street">Straße</label>
-            <input type="text" id="street" name="street" pattern="^[A-Za-zzßÄÖÜäöü]+(([-]|[\s])?[A-Za-zzßÄÖÜäöü]+)*">
+            <input type="text" id="street" name="street" pattern="^[A-Za-zzßÄÖÜäöü]+(([-]|[\s])?[A-Za-zzßÄÖÜäöü]+)*" value="{{fields.street_sepa if fields.street_sepa != None else '' }}">
             <span>
                 <details>
                     <summary>Hilfe?</summary>
@@ -24,7 +24,7 @@
         </li>
         <li>
             <label for="home_nr">Hausnummer</label>
-            <input type="text" id="street_nr" name="street_nr">
+            <input type="text" id="street_nr" name="street_nr" value="{{fields.streetnumber_sepa if fields.streetnumber_sepa != None else '' }}">
             <span>
                 <details>
                     <summary>Hilfe?</summary>
