--- a/templates/de/payment_methods/payment_methods2.html
+++ b/templates/de/payment_methods/payment_methods2.html
@@ -11,8 +11,16 @@
         <ul>
             <li>
                 <label for="">Zahlungsart</label>
+                {% if fields.type_of_transfer == "sepa" %} 
+                <input type="radio" id="sepa" name="type" value="sepa" checked="checked" required> Durch Lastschrift <br>
+                <input type="radio" id="bank_transfer" name="type" value="bank"> Durch Überweisung
+            {% elif fields.type_of_transfer == "bank" %} 
+                <input type="radio" id="sepa" name="type" value="sepa" required> TDurch Lastschrift <br>
+                <input type="radio" id="bank_transfer" name="type" value="bank" checked="checked"> Durch Überweisung
+            {%else%}
                 <input type="radio" id="sepa" name="type" value="sepa" required> Durch Lastschrift <br>
                 <input type="radio" id="bank_transfer" name="type" value="bank"> Durch Überweisung
+            {%endif%}
                 <span>
                     <details>
                         <summary>Hilfe?</summary>
