--- a/templates/bg/adress/adress2.html
+++ b/templates/bg/adress/adress2.html
@@ -10,7 +10,7 @@
         <ul>
             <li>
     <label for="street">Улица</label>
-    <input type="text" name="street" id="street" pattern="^[A-Za-zßÄÖÜäöü]+(([-]|[\s])?[A-Za-zßÄÖÜäöü]+)*" required>
+    <input type="text" name="street" id="street" pattern="^[A-Za-zßÄÖÜäöü]+(([-]|[\s])?[A-Za-zßÄÖÜäöü]+)*" value="{{fields.street if fields.street != None else '' }}" required>
     <span class="extra-info"> <details><summary>
         Помощ?
     </summary> 
@@ -23,7 +23,7 @@
 </li>
 <li>
     <label for="street_nr">Номер на улица</label>
-    <input type="text" id="street_nr" name="street_nr" required>
+    <input type="text" id="street_nr" name="street_nr" value="{{fields.streetnumber if fields.streetnumber != None else '' }}" required>
     <span class="extra-info"><details><summary>
         Помощ?
     </summary> 
