--- a/templates/bg/general_information/general_information1.html
+++ b/templates/bg/general_information/general_information1.html
@@ -1,25 +1,35 @@
 {% extends 'bg/bg_base.html' %}
 
 {% block head %}
-<title>Адресна регистрация</title>
+<title>GEZ</title>
 {% endblock %}
 {% block body %}
 <form action="/{{language}}/gez/general_information1" method='POST'>
     <h1>Обща информация 1 от 3</h1>
     <ul>
         <li>
-            <label for="">Пол</label>
-            <input type="radio" name="gender" id="radioMale" required> Мъж
-            <input type="radio" name="gender" id="radioFemale"> Жена
+            <label for="">Първо име</label>
+            {% if fields.gender == "Male" %} 
+                <input type="radio" name="gender" id="radioMale" value="Male" checked="checked" required> Мъж
+                <input type="radio" name="gender" id="radioFemale" value="Female"> Жена
+            {%elif fields.gender == "Female"%}
+                <input type="radio" name="gender" id="radioMale" value="Male" required> Мъж
+                <input type="radio" name="gender" id="radioFemale" value="Female" checked="checked"> Жена
+            {%else %}
+                <input type="radio" name="gender" id="radioMale" value="Male" required> Мъж
+                <input type="radio" name="gender" id="radioFemale" value="Female"> Жена
+            {%endif%}
+            
+            
             <span><details><summary>
                 Помощ?
             </summary> 
-                <p>Моля, изберете пол </p>
+                <p>Моля, изберете пол</p>
             </details></span>
         </li>
         <li>
-               <input type="button" value="обратно" onClick="javascript:history.back()">
-            <input type="submit" value="Изпращане">
+               <input type="button" value="Back" onClick="javascript:history.back()">
+            <input type="submit" value="Submit">
             
              
             
