--- a/templates/bg/general_information/general_information3.html
+++ b/templates/bg/general_information/general_information3.html
@@ -9,7 +9,7 @@
     <ul>
         <li>
             <label for="dateOfBirth">Дата на раждане</label>
-            <input type="date" name="dateOfBirth" id="dob" required>
+            <input type="date" name="dateOfBirth" id="dob" value="{{fields.date_of_birth if fields.date_of_birth != None else '' }}" date_of_birth required>
             <span><details><summary>
                 Помощ?
             </summary> 
