--- a/templates/de/payment_methods/payment_methods2.html
+++ b/templates/de/payment_methods/payment_methods2.html
@@ -15,7 +15,7 @@
                 <input type="radio" id="sepa" name="type" value="sepa" checked="checked" required> Durch Lastschrift <br>
                 <input type="radio" id="bank_transfer" name="type" value="bank"> Durch Überweisung
             {% elif fields.type_of_transfer == "bank" %} 
-                <input type="radio" id="sepa" name="type" value="sepa" required> TDurch Lastschrift <br>
+                <input type="radio" id="sepa" name="type" value="sepa" required> Durch Lastschrift <br>
                 <input type="radio" id="bank_transfer" name="type" value="bank" checked="checked"> Durch Überweisung
             {%else%}
                 <input type="radio" id="sepa" name="type" value="sepa" required> Durch Lastschrift <br>
